// Users table
Table users {
  id integer [pk]
  username varchar [not null, unique]
  email varchar [not null, unique]
  created_at datetime [default: `CURRENT_TIMESTAMP`]
}

// Report Types table
Table report_types {
  id integer [pk]
  name varchar [not null]
  description text
}

// Reports table
Table reports {
  id integer [pk]
  user_id integer [ref: > users.id, not null]
  report_type_id integer [ref: > report_types.id, not null]
  generated_at datetime [default: `CURRENT_TIMESTAMP`]
  is_primary boolean [default: false]
  additional_info text
}

// Zodiac Signs table
Table zodiac_signs {
  id integer [pk]
  name varchar [not null]
  element_id integer [ref: > elements.id]
  ruling_planet_id integer [ref: > planets.id]
  modality_id integer [ref: > modalities.id]
}

// Planets table
Table planets {
  id integer [pk]
  name varchar [not null]
  element_id integer [ref: > elements.id]
  description text
}

// Elements table
Table elements {
  id integer [pk]
  name varchar [not null]
  description text
}

// Modalities table
Table modalities {
  id integer [pk]
  name varchar [not null]
  description text
}

// Birth Chart table (specific to a report)
Table birth_charts {
  id integer [pk]
  report_id integer [ref: > reports.id, not null]
  sun_sign_id integer [ref: > zodiac_signs.id, not null]
  moon_sign_id integer [ref: > zodiac_signs.id, not null]
  rising_sign_id integer [ref: > zodiac_signs.id, not null]
  planets_data json
  houses_data json
  aspects_data json
}

// Birth Data table (stores location and timezone for birth charts)
Table birth_data {
  id integer [pk]
  user integer [ref: > users.id, not null, unique]
  birth_date date [not null]
  birth_time time [not null]
  location_name varchar [not null]
  timezone_name varchar [not null]
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  is_primary boolean [default: false]
  pronouns varchar [not null]
  sexual_orientation varchar [not null]
  is_romantic_relation boolean [default: false]
  is_family_relation boolean [default: false]
  is_friendship_relation boolean [default: false]
}

// Migrations table (for tracking seed data)
Table migrations {
  version varchar [pk]
  name varchar [not null]
  applied_at datetime [default: `CURRENT_TIMESTAMP`]
  checksum varchar [not null]
}

